--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -1,15 +1,15 @@
 /* Slider container setup */
 .slider {
     position: relative;
-    width: 100%;
-    height: 60vh; /* Adjust this for the desired height of your slider */
+    width: 70%;
+    height: 40vh; /* Adjust this for the desired height of your slider */
     overflow: hidden; /* Ensures that images don't overflow */
 }
 
 /* Set up the container for the slides */
 .slider-container {
     position: relative;
-    width: 300%; /* 3 slides will be in the container */
+    width: 500%; /* 3 slides will be in the container */
     display: flex;
     transition: transform 1s ease-in-out;
 }
@@ -48,8 +48,8 @@
 
 /* Styling for the dots */
 .dot {
-    height: 15px;
-    width: 15px;
+    height: 12px;
+    width: 12px;
     margin: 0 5px;
     border-radius: 50%;
     background-color: white;
@@ -66,6 +66,6 @@
 
 /* Active dot style */
 .dot.active {
-    background-color: #f4b400; /* Active dot color */
+    background-color: #ffffff; /* Active dot color */
     opacity: 1; /* Active dot is fully visible */
 }
