--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,11 +4,11 @@
 }
 main{
     display: grid;
-    grid-template-rows: 800px;
+    grid-template-rows: 80vh;
     padding-top: 10rem;
     align-items: center;
     justify-items: center;
-    background-image: url("../sliderimages/home-image.webp");
+    background-color: #f0f0f0;
     opacity: 1;
     height: 70vh;
 }
@@ -49,7 +49,7 @@ main{
     display: grid;
     grid-template-rows: 1.5fr 1fr 1fr;
     justify-items: center;
-    opacity: 1;
+    gap: 20px;
 }
 .second-home-heading{
     font-size: 2rem;
@@ -60,16 +60,15 @@ main{
 .homepage-tagline{
     font-size: 4rem;
     text-align: center;
-    color: #ffffff;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-    font-weight: 800;
+    color: #000000;
+    margin-bottom: 40px;
 }
 
 .homepage-tagline-description{
     text-align: center;
     font-size: 2rem;
-    color: rgb(204, 203, 203);
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+    color: rgb(99, 99, 99);
+
 }
 
 .join-now-btn {
@@ -81,7 +80,7 @@ main{
     text-align: center;
     text-decoration: none; /* Remove underline */
     color: white; /* Contrast text */
-    background: linear-gradient(45deg, #ff4500, #ff6347); /* Dynamic gradient */
+    background: linear-gradient(45deg, #56933a, #56933a); /* Dynamic gradient */
     border: none;
     border-radius: 50px; /* Smooth, rounded edges */
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2); /* Subtle shadow for depth */
@@ -92,14 +91,14 @@ main{
 /* Hover Effect */
 .join-now-btn:hover {
     transform: scale(1.1); /* Slightly increase size */
-    background: linear-gradient(45deg, #ff6347, #ff4500); /* Reverse gradient */
+    background: linear-gradient(45deg, #56933a, #56933a); /* Reverse gradient */
     box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3); /* Enhance shadow */
 }
 
 /* Focus Effect */
 .join-now-btn:focus {
     outline: none; /* Remove default outline */
-    box-shadow: 0 0 10px #ff6347; /* Add glow effect */
+    box-shadow: 0 0 10px #6ec148; /* Add glow effect */
 }
 
 /* Active Effect */
